[package]
name = "janet"
version = "0.1.0"
authors = ["Patryk Wychowaniec <wychowaniec.patryk@gmail.com>"]
edition = "2018"
autotests = false

[dependencies]
anyhow = "1.0"
bytes = "0.5"
chrono = { version = "0.4", features = ["serde"] }
nom = "6.0.0-alpha1"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { git = "https://github.com/Patryk27/sqlx", rev = "fe1570c74e39614a70426cc4acddd3badfad4faa", default-features = false, features = ["chrono", "macros", "runtime-tokio", "sqlite"] }
structopt = "0.3"
test-case = "1.0"
thiserror = "1.0"
tokio = { version = "0.2", features = ["full"] }
toml = "0.5"
tracing = "0.1"
tracing-futures = "0.2"
tracing-gelf = "0.3"
tracing-subscriber = "0.2"
url = { version = "2.1", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
warp = "0.2"

[dev-dependencies]
mockito = "0.27"
