[package]
name = "lib_database"
version = "0.0.0"
authors = ["Patryk Wychowaniec <wychowaniec.patryk@gmail.com>"]
edition = "2018"

[dependencies]
lib_gitlab = { path = "../gitlab" }

anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5", default-features = false, features = ["chrono", "macros", "runtime-tokio-rustls", "sqlite"] }
tokio = { version = "0.2", features = ["full"] }
tracing = "0.1"
tracing-futures = "0.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
