[package]
name = "lib_gitlab"
version = "0.0.0"
authors = ["Patryk Wychowaniec <wychowaniec.patryk@gmail.com>"]
edition = "2018"

[features]
mock = ["wiremock"]

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
tracing = "0.1"
tracing-futures = "0.2"
url = { version = "2.1", features = ["serde"] }
wiremock = { version = "0.2", optional = true }

[dev-dependencies]
pretty_assertions = "0.6"
