[package]
name = "lib_interface"
version = "0.0.0"
authors = ["Patryk Wychowaniec <wychowaniec.patryk@gmail.com>"]
edition = "2018"

[dependencies]
lib_gitlab = { path = "../gitlab" }

anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
nom = "6.0.0-alpha1"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
test-case = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-futures = "0.2"
url = { version = "2.1", features = ["serde"] }
